# goverse

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  ASYNC_OPERATIONS.md  AUTO_CREATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONSENSUS_MANAGER_REFACTORING.md  GATEWAY_DESIGN.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES_DEPLOYMENT_TODO.md  PROMETHEUS_INTEGRATION.md  PR_TODO.md  README.md  REVIEW_SUMMARY.md  SHARDING_TODO.md  SOLUTION_SUMMARY.md  TESTING.md  codecov.yml  docker-compose.yml  go.mod  go.sum  log  typescript
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
client/: client.go  client_test.go
client/goverseclient_python/: README.md  __init__.py  client.py  py.typed  pyproject.toml
client/goverseclient_python/tests/: __init__.py  test_client.py
cluster/: cluster.go  cluster_async_operations_test.go  cluster_auto_creation_test.go  cluster_autoload_integration_test.go  cluster_autoload_pernode_integration_test.go  cluster_automatic_notification_test.go  cluster_automatic_shardmapping_integration_test.go  cluster_broadcast_test.go  cluster_calleridentity_integration_test.go  cluster_callobject_timeout_test.go  cluster_createobject_test.go  cluster_createobject_timeout_test.go  cluster_distributed_createobject_integration_test.go  cluster_dynamic_shard_migration_integration_test.go  cluster_etcd_integration_test.go  cluster_fixednode_test.go  cluster_fixedshard_test.go  cluster_gate_node_connection_cleanup_integration_test.go  cluster_gate_node_createobject_integration_test.go  cluster_gate_node_restart_integration_test.go  cluster_gate_ready_test.go  cluster_gate_registers_to_all_nodes_test.go  cluster_gate_registration_integration_test.go  cluster_livectx_test.go  cluster_migration_persistence_test.go  (+45 more)
(+600 files in other folders)
